# game-of-life

./: Cargo.toml  README.md  flake.nix  index.html  rust-toolchain.toml
src/: main.rs
