[package]
name = "game-of-life"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_call = "allow"

[dependencies]
macroquad = "0.4.14"
